# agentic-ai

./: fullstack.ipynb
dbanalyzer/: pyproject.toml
dbanalyzer/output/: analyzedata.md  decide.md  generatedquery.md  generatequery.md  oppose.md  propose.md  schemalookup.md
dbanalyzer/src/dbanalyzer/: crew.py  main.py
dbanalyzer/src/dbanalyzer/config/: agents.yaml  tasks.yaml
dbanalyzer/src/dbanalyzer/tools/: query_runner_tool.py
mcp/: 1_lab1.ipynb  accounts.db
